# Python_web

./: .gitignore
Algorithms_dop/: find.py  main.py  pyproject.toml  read_me.md  web_16_alg.ipynb
FinalProject-address-book/: Dockerfile  logs.txt  pyproject.toml
add_2_recursives_and_algorithms/: args_pro.py  bubble_sort.py  insertion_sort.py  merge_sort.py  pyproject.toml  quick_sort.py  radix_sort.py  recursion_01.py  recursion_02.py  recursion_03.py  recursion_04.py  selection_sort.py  shell_sort.py  sort_bubble.py
dop_lessons/dop_3_find_algo/: bm.py  hash.py  index_linear_search.py  interpolation.py  kmp_search.py  linear_search.py  naitive_search.py  pyproject.toml
modul_2/: pyvenv.cfg
modul_2(Poetry+Docker)/app_pipenv_2602/: app.py
modul_2(Poetry+Docker)/app_poetry_2802/: pyproject.toml
modul_2(Poetry+Docker)/docker_test/: .dockerignore  Dockerfile  logs.txt  pyproject.toml  setup.py
modul_2(Poetry+Docker)/flask_docker_app_01_03/: Dockerfile  pyproject.toml
modul_2(Poetry+Docker)/helper_docker_image/: logs.txt  pyproject.toml
modul_2(Poetry+Docker)/m16_poetry_app/: Dockerfile  app.py  pyproject.toml
modul_2(Poetry+Docker)/mongo_db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-956720709611083468.wt  collection-2-956720709611083468.wt  collection-4-956720709611083468.wt  collection-7-956720709611083468.wt  index-1-956720709611083468.wt  index-3-956720709611083468.wt  index-5-956720709611083468.wt  index-6-956720709611083468.wt  index-8-956720709611083468.wt  sizeStorer.wt
modul_2(Poetry+Docker)/poetry_proj/: pyproject.toml
modul_2(Poetry+Docker)/poetry_proj+konspekt/: __main__.py  debug_file.py  pyproject.toml
modul_2(Poetry+Docker)/poetry_test_proj/: pyproject.toml
modul_2(Poetry+Docker)/poetry_test_proj/poetry_test_proj/: requirements.txt
modul_2(Poetry+Docker)/web16_pip_app/: Dockerfile
modul_2(Poetry+Docker)/web_16_dev/: call.py  log01.py  log02.py  log03.py  log04.py  log05.py  main.py  my_logger.py  pyproject.toml  type_example.py
modul_2/db_storage/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-853241910771640660.wt  collection-2-853241910771640660.wt  index-1-853241910771640660.wt  index-3-853241910771640660.wt  sizeStorer.wt
modul_2/flask-docker-app/: Dockerfile  app.py
modul_2/mongo_db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--5100378202409249905.wt  collection-2--5100378202409249905.wt  index-1--5100378202409249905.wt  index-3--5100378202409249905.wt  sizeStorer.wt
modul_2/poetry_test/: pyproject.toml
modul_3/Konspekt_threads/: thread_class.py  thread_function.py  thread_functor.py
modul_3/Multiprocessing/: 01_process_as_function.py  02_process_as_class.py  03_process_join.py  04_process_lock_value_array.py  05_process_event.py  06_process_event_stop.py  07_process_event_restart.py  08_condition.py  09_semaphore_manager.py  10_process_barrier.py  11_process_callback.py  12_process_pool.py  13_pool_imap.py  14_pool_map.py  15_pipe.py  16_pipe_duplex.py  17_work_file.py  18_work_file_test.py  19_queue.py  20_queue_join.py  pyproject.toml
modul_3/Multithreading/: 01_thread_like_class.py  02_thread_like_function.py  03_thread_timer.py  04_thread_lock.py  (+9 more)
modul_4/: pyproject.toml
modul_5/async_await/: 01_intro.py  02_gather.py  03_create_task.py  04_forever.py  05_future_task.py  07_process_executor.py  08_get_http.py  pyproject.toml
modul_5/async_http/: 01_async_for.py  02_async_for.py  03_async_for.py  04_async_queue.py  05_wait.py  06_aiohttp_client.py  07_httpx_client.py  pyproject.toml
modul_5/async_http/chat/: server.py
modul_5/async_http/file/: main.py
modul_5/async_http/task_runner/: main.js  main.py
modul_5/async_http/task_runner/files/: fabric-waterfall.js  image-promise.js
modul_5/modul_asincio/: 01_asyncio.py  02_io_requests_asynchro.py  02_io_requests_synchro.py  03_asyncio_task.py  04_cpu_bound.py  05_io_bound_sync.py  06_aiofile_read.py  06_asinc_for-cycle.py  06_async_LineReader.py  07_aiopath.py  08_aioshutil.py  pyproject.toml
modul_5/web-sockets_AIOHTTP/: 01_aiohttp_request.py  02_aiohttp_response.py  03_aiohttp_session_creation.py  04_session_is_argument_of_function.py  05_set_of_parameters.py  11_ws_brouser_server.py  12_ws_consumer_2.py  12_ws_server.py  13_ws_chat_client.html  pyproject.toml
modul_6/: dump-test-202404271938.sql  dump-test-202404271939.sql
modul_7_ORM_SQLAlchemy/Migrations_Alembic/: config.ini  pyproject.toml
modul_7_ORM_SQLAlchemy/Migrations_Alembic/conf/: db.py  models.py
modul_7_ORM_SQLAlchemy/Migrations_Alembic/migrations/: env.py
modul_7_ORM_SQLAlchemy/ORM_SQLAlchemy/: orm_async_session.py  orm_core.py  orm_session.py  orm_session_new_api.py  pyproject.toml
modul_7_ORM_SQLAlchemy/m16_hw/: Untitled.sql  config.ini  main.py  pyproject.toml
modul_7_ORM_SQLAlchemy/m16_hw/conf/: db.py  models.py
modul_7_ORM_SQLAlchemy/m16_hw/migrations/: env.py
modul_7_ORM_SQLAlchemy/m16_hw/migrations/versions/: ea86a82c2219_init.py
new_algo/: pyproject.toml
(+83 files in other folders)
