[tool.poetry]
name = "async-http"
version = "0.1.0"
description = ""
authors = ["Aleksandr <aleksandr.voitushenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^24.8.0"
requests = "^2.31.0"
aiohttp = "^3.9.4"
httpx = "^0.27.0"
aioshutil = "^1.3"
aiopath = "0.6.11"
aiofile = "^3.8.8"
websockets = "^12.0"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
